--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@mui/joy": "^5.0.0-beta.22",
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
-    "@preact/signals-react": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "firebase": "^10.7.1",
@@ -25,14 +25,15 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "vite": "^5.2.10",
+    "vite-tsconfig-paths": "^4.3.2",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
-    "dev": "npm run start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -49,7 +50,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
-    "@preact/signals-react-transform": "^0.3.1",
     "nodemon": "^3.1.0"
   },
   "eslintConfig": {
