--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-loading-indicators": "^0.2.3",
     "react-router-dom": "^6.21.1",
     "vite": "^5.2.10",
     "vite-tsconfig-paths": "^4.3.2",
